--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,8 +245,6 @@ section {
 .nav-link.active, .navbar .nav-link.active, .navbar-expand-lg .navbar-nav .nav-link.active{
     color: white;
 }
-
-
 .nav-link.nav-btn , navbar .nav-link.nav-btn , .navbar-expand-lg .navbar-nav .nav-link.nav-btn {
     background-color: rgba(255, 255, 255, 0.164);
     border: 1px solid #2D8CFF;
@@ -376,7 +374,7 @@ display: none;
 .buttons{
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content:center;
     padding-right: 50px;
 }
 .buttons .search-category{
@@ -1182,16 +1180,13 @@ border-color: transparent;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
-.city .form-check {
-    display: inline-block;
-    margin: 0 0 1rem 1rem;
-}
+
 .city .accordion-item {
     background-color: transparent
 }
 .border-right{
     border-right: 1px solid #d9dee3;
-    min-height: 176px;
+    min-height: 220px;
 }
 .city .accordion{
     background-color: #f8f9fa;
