--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,6 +549,12 @@ text-shadow: 0px 1px 3px #00000042;
 
 
 /******** Boxes *********/
+.boxes{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .box{
     padding: 0.7rem;
     display: flex;
@@ -3333,7 +3339,7 @@ header{
         text-align: center;
     }
     .boxes{
-    display: flex;
+    flex-direction: row;
     justify-content: space-around;
     }
     .box {
